# aerospike-client-c

./: .gitignore
proxy/: CMakeLists.txt  proto
proxy/cmake/: common.cmake
proxy/src/include/: aerospike_auth_proxy.h  aerospike_proxy.h  aerospike_proxy_cluster.h  aerospike_strings.h
proxy/src/main/aerospike/: aerospike_auth_proxy.cc  aerospike_key_proxy.cc  aerospike_proxy_cluster.cc  main.cc
src/include/aerospike/: aerospike.h
